# practice

./: README.md
.github-disabled/workflows/: ci.yml
.github/workflows/: ci.yml
buontempo/: 00_two_sum.cpp  01_hello_world.cpp  01_hello_world_cout.cpp  02_input.cpp  05_input.cpp  05_input.h  05_main.cpp  CMakeLists.txt  README.md
buontempo-introducingcpp/: 00_two_sum_test.cpp  01_hello_world.cpp  01_hello_world_cout.cpp  01_hello_world_test.cpp  02_input_experiment.cpp  02_input_test.cpp  CMakeLists.txt  README.md
leetcode/: README.md
leetcode/c-sharp/: README.md  l00001_two_sum.cs  l00001_two_sum_test.cs  leetcode-csharp.csproj  leetcode.slnx
leetcode/cpp/: CMakeLists.txt  README.md  l00001_two_sum.cpp  l00001_two_sum_test.cpp
leetcode/python/: README.md  l00001_two_sum.py  l00001_two_sum_test.py
leetcode/rust/: README.md
leetcode/rust/src/: l00001_two_sum.rs  l00001_two_sum_test.rs  lib.rs
leetcode/typescript/: README.md  jest.config.ts  l00001_two_sum.ts  l00001_two_sum_test.ts  package-lock.json  package.json  tsconfig.json
